--- a/app/src/main/res/layout/pokemon_list_item.xml
+++ b/app/src/main/res/layout/pokemon_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin_small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <LinearLayout
-                android:padding="16dp"
+                android:padding="@dimen/margin_medium"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -30,8 +30,8 @@
                     android:textStyle="bold"
                     android:textSize="24sp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    android:layout_marginBottom="@dimen/margin_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
