--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:clickable="true"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -118,7 +119,6 @@
 
     <ImageView
         android:id="@+id/pokemon_image"
-        android:src="@drawable/ic_launcher_background"
         android:layout_alignTop="@id/card_view"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-50dp"
