--- a/app/src/main/res/layout/pokemon_list_item.xml
+++ b/app/src/main/res/layout/pokemon_list_item.xml
@@ -18,8 +18,8 @@
                 android:layout_height="wrap_content">
             <ImageView
                     android:id="@+id/pokemon_image"
+                    android:background="@android:color/white"
                     android:scaleType="fitXY"
-                    android:background="@drawable/ic_launcher_background"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="150dp"
                     android:layout_height="150dp"/>
